2008-06-26  Neal H. Walfield  <neal@gnu.org>

	* configure.ac: Spell DEBUG_ELIDE correctly.

2008-06-22  Neal H. Walfield  <neal@gnu.org>

	* configure.ac (--enable-runtime-checks): Fix spelling.

2008-06-21  Thomas Schwinge  <tschwinge@gnu.org>

	* README (Using the Cross-Compiler): New section.

2008-06-20  Neal H. Walfield  <neal@gnu.org>

	* configure.ac (--enable-runtime-checks): New command line option.
	(USER_CPPFLAGS, KERNEL_CPPFLAGS): Add $CPP_CHECKS.
	(USER_CFLAGS, KERNEL_CFLAGS): Add $C_CHECKS.

2008-06-20  Thomas Schwinge  <tschwinge@gnu.org>

	* README (Documentation): New section.

2008-06-18  Thomas Schwinge  <tschwinge@gnu.org>

	* Makefile.am [HAVE_CROSS] (all-local): Depend on libstdc++.

2008-06-05  Neal H. Walfield  <neal@gnu.org>

	* libc.a.in: Remove -lhurd-cap.
	* Makefile.am (libc-stmp): Remove dependency on
	viengoos/libhurd-cap.a.

2008-06-01  Thomas Schwinge  <tschwinge@gnu.org>

	* Makefoo.am (PATH): Move definition...
	* configure.ac: ... here.

2008-05-31  Thomas Schwinge  <tschwinge@gnu.org>

	* configure.ac (USER_CFLAGS, KERNEL_CFLAGS, CHECK_CFLAGS): Don't
	specify ``-fno-stack-protector''.

	* configure.ac (ABS_BUILDDIR): Use a more portable way to set.

2008-05-30  Neal H. Walfield  <neal@gnu.org>

	* benchmarks: New directory.
	* configure.ac: Generate benchmarks/Makefile and
	benchmarks/boehm-gc/Makefile.
	* Makefile.am (SUBDIRS): Add benchmarks.

2008-05-30  Thomas Schwinge  <tschwinge@gnu.org>

	* configure.ac (missing_progs): Rename to...
	(missing_doc_progs): ... this.
	(DOC): New variable.  Used to indicate whether to documentation
	files can be built.
	Make it non-fatal if the documentation can't be built.
	* Makefile.am (SUBDIRS): Use $(DOC).

	* configure.ac (AM_MAINTAINER_MODE): Get rid of it.
	* README: Reflect that.

	* README: Suggest ``make -j''.

2008-05-30  Neal H. Walfield  <neal@gnu.org>

	* configure.ac: Call AM_PROG_CC_C_O.

2008-05-30  Neal H. Walfield  <neal@gnu.org>

	* Makefoo.am (abs_builddir): Define.
