@@ -1,3 +1,8 @@
+2008-06-27  Neal H. Walfield  <neal@gnu.org>
+
+	* configure.ac (--enable-runtime-checks): If zero, don't just
+	define DEBUG_ELIDE, define it to 1.
+
 2008-06-26  Neal H. Walfield  <neal@gnu.org>
 
 	* configure.ac: Spell DEBUG_ELIDE correctly.
